--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <section class="html-section" id="hero">
             <h1>SilverForBaku</h1>
             <p>Zərifliyinizi Tamamlayan Gümüş Aksesuarlar</p>
+            <button style="background-color: lightgray; padding: 10px 20px; border-radius: 50px; margin: 20px; border: none;">
+
+  <a href="https://entire-for-baku-web-sites.vercel.app/" style="color: black; text-decoration: none; font-size: 15px;">Digər səhifələrimizə nəzər yetir!</a>
+
+</button>
             <div class="scroll-down-indicator">
                 <div class="mouse"></div>
             </div>
